--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -40,11 +42,12 @@
     </header>
 
     <main>
-      <h1 hidden>Портфоліо</h1>
       <section>
-        <h2 hidden>кнопки і фото</h2>
+        <h1 hidden>Портфоліо</h1>
         <ul>
-          <li><button class="button-portfolio" type="button">Все</button></li>
+          <li>
+            <button class="button-portfolio current" type="button">Все</button>
+          </li>
           <li>
             <button class="button-portfolio" type="button">Веб-сайти</button>
           </li>
@@ -67,7 +70,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name">Технокряк</h3>
+              <h2 class="name">Технокряк</h2>
               <p class="type">Веб-сайт</p>
             </a>
           </li>
@@ -79,7 +82,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name">Постер New Orlean vs Golden Star</h3>
+              <h2 class="name">Постер New Orlean vs Golden Star</h2>
               <p class="type">Дизайн</p></a
             >
           </li>
@@ -91,7 +94,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name">Ресторан Seafood</h3>
+              <h2 class="name">Ресторан Seafood</h2>
               <p class="type">Додаток</p></a
             >
           </li>
@@ -103,7 +106,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name">Проєкт Prime</h3>
+              <h2 class="name">Проєкт Prime</h2>
               <p class="type">Маркетинг</p></a
             >
           </li>
@@ -115,7 +118,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name">Проєкт Boxes</h3>
+              <h2 class="name">Проєкт Boxes</h2>
               <p class="type">Додаток</p></a
             >
           </li>
@@ -127,7 +130,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name" lang="en">Inspiration has no Borders</h3>
+              <h2 class="name" lang="en">Inspiration has no Borders</h2>
               <p class="type">Веб-сайт</p></a
             >
           </li>
@@ -139,7 +142,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name">Видання Limited Edition</h3>
+              <h2 class="name">Видання Limited Edition</h2>
               <p class="type">Дизайн</p></a
             >
           </li>
@@ -151,7 +154,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name">Проект LAB</h3>
+              <h2 class="name">Проект LAB</h2>
               <p class="type">Маркетинг</p></a
             >
           </li>
@@ -163,7 +166,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="name" lang="en">Growing Business</h3>
+              <h2 class="name" lang="en">Growing Business</h2>
               <p class="type">Додаток</p></a
             >
           </li>
